--- a/.travis.yml
+++ b/.travis.yml
@@ -1,18 +1,25 @@
-sudo: false
 language: node_js
-node_js:
-  - 10
-cache: npm
+node_js: stable
+
+cache:
+  directories:
+    - node_modules
+
+install:
+  - npm install
+
+script:
+  - hexo g
+
+after_script:
+  - cd ./public
+  - git init
+  - git config user.name "zjy7"
+  - git config user.email "zjy7@hotmail.com"
+  - git add .
+  - git commit -m "Update blog content by Travis CI"
+  - git push --force --quiet "https://${GH_TOKEN}@${GH_REF}" master:master
+
 branches:
   only:
-    - gh-pages
-script:
-  - hexo generate
-deploy:
-  provider: pages
-  skip-cleanup: true
-  github-token: $GH_TOKEN
-  keep-history: true
-  on:
-    branch: master
-  local-dir: public
+    - master
