--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ after_script:
   - git config user.email "zjy7@hotmail.com"
   - git add .
   - git commit -m "Update blog content by Travis CI"
-  - git push --force --quiet "https://${GH_TOKEN}@${GH_REF}" master:master
+  - git push --force --quiet "https://${GH_TOKEN}@github.com/zjy7/zjy7.github.io.git" master:master
 
 branches:
   only:
