--- a/_config.yml
+++ b/_config.yml
@@ -5,10 +5,10 @@
 # Site
 title: Bale's Blog
 subtitle: ''
-description: ''
+description: '前端攻城狮'
 keywords: ''
 author: '张金怡'
-language: en
+language: zh-CN
 timezone: 'Asia/Shanghai'
 
 # URL
