--- a/.travis.yml
+++ b/.travis.yml
@@ -5,13 +5,23 @@ cache:
   directories:
     - node_modules
 
+before_install:
+  - export TZ='Asia/Shanghai'
+  - npm install -g hexo-cli
+
 install:
   - npm install
 
 script:
+  - hexo clean
   - hexo g
 
 after_script:
+  - git clone https://${GH_REF} .deploy_git
+  - cd .deploy_git
+  - git checkout master
+  - cd ../
+  - mv .deploy_git/.git/ ./public/
   - cd ./public
   - git init
   - git config user.name "zjy7"
