--- a/_config.yml
+++ b/_config.yml
@@ -4,16 +4,16 @@
 
 # Site
 title: Bale's Blog
-subtitle: ''
-description: '前端攻城狮'
-keywords: ''
-author: '张金怡'
+subtitle: '前端攻城狮'
+description: 'Hello world'
+keywords: 'Front End, Javascript'
+author: 'Bale'
 language: zh-CN
 timezone: 'Asia/Shanghai'
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
-url: https://zjy7.github.io
+url: https://www.zjy7.top
 root: /
 permalink: :year/:month/:day/:title/
 permalink_defaults:
